# pdf-rag

./: .env.example  .gitignore  README.md  index.py  pyproject.toml  requirements.txt
frontend/: index.html
frontend/assets/: index-CRtS8lZJ.js  index-b2D6p9jN.css
helpers/: agent.py  email_sender.py  middleware.py  milvus.py
